--- a/public/windows/master.css
+++ b/public/windows/master.css
@@ -74,9 +74,73 @@ html,
 body {
   margin: 0;
   padding: 0;
+  background-color: #eeeeee;
 }
 .preloader-wrapper {
   position: relative;
   width: 50px;
   height: 50px;
+}
+.dashboard {
+  display: none;
+}
+.side-nav .mobile-nav-header {
+  color: white;
+  text-align: center;
+  border-bottom: 1px solid grey;
+  margin: 0;
+  padding: 15px 0;
+}
+.login {
+  display: none;
+}
+.analytics-main {
+  position: absolute;
+  left: 0;
+  top: 145px;
+  width: 100%;
+}
+.card-panel {
+  position: relative;
+  padding-top: 40px;
+}
+.card-panel .card-header {
+  top: 10px;
+  left: 0;
+  padding-left: 20px;
+  border-bottom: 1px solid #d0d0d0;
+  font-size: 17px;
+  position: absolute;
+  width: 100%;
+}
+.page-navbar {
+  margin-top: 4px;
+  padding: 15px 30px;
+  width: 100%;
+  border-bottom: 1px solid darkgrey;
+  background-color: #fafafa;
+}
+.page-navbar h5 {
+  margin: 0;
+}
+.page-navbar div {
+  line-height: 1;
+}
+.page-navbar .breadcrumb {
+  color: gray !important;
+  font-size: 15px;
+}
+.page-navbar .breadcrumb:before {
+  color: gray;
+  font-size: 15px;
+}
+.page-navbar .material-icons {
+  margin-left: 10px;
+  font-size: 15px;
+  color: gray;
+  vertical-align: text-top;
+  display: inline-block;
+}
+.page-navbar .bread {
+  display: inline-block;
 }
