--- a/public/windows/master.less
+++ b/public/windows/master.less
@@ -130,7 +130,6 @@ html, body {
   }
 }
 
-
 .page-navbar {
   margin-top: 4px;
   padding: 15px 30px;
@@ -166,4 +165,22 @@ html, body {
   .bread {
     display: inline-block;
   }
+}
+
+.analytics-main {
+  .card {
+    margin: 15px 15px;
+  }
+}
+//
+//.ats-not-connected, .module-not-connected{
+//  display: none;
+//}
+
+.widget {
+  margin: 0 auto;
+  //width:350px;
+  //margin-top:50px;
+  //background-color: #222D3A;
+  border-radius: 5px;
 }
